--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 *.swp
 *.swo
 .bak
-.idea/
-.revision
+*.bak
+.DS_Store
+build/*
 .cometbft
 .cometbft-lite
 rpc/test/.cometbft
@@ -26,7 +27,6 @@ libs/pubsub/query/fuzz_test/output
 profile\.out
 remote_dump
 rpc/test/.cometbft
-scripts/cutWALUntil/cutWALUntil
 scripts/wal2json/wal2json
 scripts/cutWALUntil/cutWALUntil
 
