--- a/.github/auto-comment.yml
+++ b/.github/auto-comment.yml
@@ -13,4 +13,4 @@ pullRequestOpened: |
   - [ ] Applied Appropriate Labels
 
 
-  Thank you for your contribution to Tendermint! :rocket:
+  Thank you for your contribution to CometBFT! :rocket:
