--- a/.github/workflows/fuzz-nightly.yml
+++ b/.github/workflows/fuzz-nightly.yml
@@ -75,7 +75,7 @@ jobs:
         uses: rtCamp/action-slack-notify@12e36fc18b0689399306c2e0b3e0f2978b7f1ee7
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: tendermint-internal
+          SLACK_CHANNEL: cometbft-engineering
           SLACK_USERNAME: Nightly Fuzz Tests
           SLACK_ICON_EMOJI: ':firecracker:'
           SLACK_COLOR: danger
