--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,15 @@ version: 2.1
 executors:
   golang:
     docker:
-      - image: tendermintdev/docker-tendermint-build
-    working_directory: /go/src/github.com/tendermint/tendermint
+      - image: cometbftdev/docker-cometbft-build
+    working_directory: /go/src/github.com/cometbft/cometbft
     environment:
       GOBIN: /tmp/bin
   release:
     machine: true
   docs:
     docker:
-      - image: tendermintdev/docker-website-deployment
+      - image: cometbftdev/docker-website-deployment
     environment:
       AWS_REGION: us-east-1
 
@@ -120,7 +120,7 @@ jobs:
 
   # # Test RPC implementation against the swagger documented specs
   # contract_tests:
-  #   working_directory: /home/circleci/.go_workspace/src/github.com/tendermint/tendermint
+  #   working_directory: /home/circleci/.go_workspace/src/github.com/cometbft/cometbft
   #   machine:
   #     image: circleci/classic:latest
   #   environment:
@@ -139,7 +139,7 @@ jobs:
   #           # install node and dredd
   #           ./scripts/get_nodejs.sh
   #           # build the binaries with a proper version of Go
-  #           docker run --rm -v "$PWD":/go/src/github.com/tendermint/tendermint -w /go/src/github.com/tendermint/tendermint golang make build-linux build-contract-tests-hooks
+  #           docker run --rm -v "$PWD":/go/src/github.com/cometbft/cometbft -w /go/src/github.com/cometbft/cometbft golang make build-linux build-contract-tests-hooks
   #           # This docker image works with go 1.7, we can install here the hook handler that contract-tests is going to use
   #           go get github.com/snikch/goodman/cmd/goodman
   #           make contract-tests
@@ -149,7 +149,7 @@ workflows:
   docs:
     jobs:
       - deploy_docs:
-          context: tendermint-docs
+          context: cometbft-docs
           filters:
             branches:
               only:
@@ -158,7 +158,7 @@ workflows:
               only:
                 - /^v.*/
       - deploy_docs:
-          context: tendermint-docs-staging
+          context: cometbft-docs-staging
           filters:
             branches:
               only:
