--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -1,5 +1,5 @@
 name: Docker
-# Build & Push rebuilds the CometBFT docker image on every push to main and creation of tags
+# Rebuilds the CometBFT docker image on every push to main and creation of tags
 # and pushes the image to https://hub.docker.com/r/cometbft/cometbft
 on:
   push:
@@ -33,7 +33,7 @@ jobs:
           if [[ $VERSION =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
             TAGS="$TAGS,${DOCKER_IMAGE}:${VERSION}"
           fi
-          echo ::set-output name=tags::${TAGS}
+          echo "tags=${TAGS}" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
