--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -1,5 +1,5 @@
 name: Docker
-# Build & Push rebuilds the CometBFT docker image on every push to main and creation of tags
+# Rebuilds the CometBFT docker image on every push to main and creation of tags
 # and pushes the image to https://hub.docker.com/r/cometbft/cometbft
 on:
   push:
@@ -11,7 +11,6 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"  # e.g. v0.37.0-alpha.1, v0.38.0-alpha.10
       - "v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"   # e.g. v0.37.0-beta.1, v0.38.0-beta.10
       - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"      # e.g. v0.37.0-rc1, v0.38.0-rc10
-
 
 jobs:
   build:
