--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -27,8 +27,10 @@ jobs:
           version: latest
           args: build --skip-validate   # skip validate skips initial sanity checks in order to be able to fully run
 
-      # Link to CHANGELOG_PENDING.md as release notes.
-      - run: echo https://github.com/cometbft/cometbft/blob/${GITHUB_REF#refs/tags/}/CHANGELOG_PENDING.md > ../release_notes.md
+      # Link to CHANGELOG.md as release notes (ensure that changelog is built
+      # with unreleased entries prior to cutting a pre-release)
+      - run: |
+          echo ":book: [CHANGELOG](https://github.com/cometbft/cometbft/blob/${GITHUB_REF#refs/tags/}/CHANGELOG.md)" > ../release_notes.md
 
       - name: Release
         uses: goreleaser/goreleaser-action@v4
