ci: Add "v" prefix to released versions on GitHub
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ checksum:
 
 release:
   prerelease: auto
-  name_template: "{{.Version}}"
+  name_template: "v{{.Version}}"
 
 archives:
   - files:
