ci: Simplify release workflow further
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,8 @@ jobs:
 
       - run: |
           VERSION="${GITHUB_REF#refs/tags/}"
-          CHANGELOG_BASE_URL="https://github.com/cometbft/cometbft/blob/${VERSION}/CHANGELOG.md"
           VERSION_REF="${VERSION//[\.]/}"
-          CHANGELOG_URL="${CHANGELOG_BASE_URL}#${VERSION_REF}"
+          CHANGELOG_URL="https://github.com/cometbft/cometbft/blob/${VERSION}/CHANGELOG.md#${VERSION_REF}"
           echo "See the [CHANGELOG](${CHANGELOG_URL}) for this release." > ../release_notes.md
 
       - name: Release
