--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: Ask a question
     url: https://github.com/cometbft/cometbft/discussions
     about: Please ask and answer questions here
+  - name: Security Bug Bounty
+    url: https://hackerone.com/cosmos
+    about: Please report security vulnerabilities here
