--- a/scripts/qa/reporting/requirements.txt
+++ b/scripts/qa/reporting/requirements.txt
@@ -9,6 +9,6 @@ Pillow==9.3.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
-pandas=1.5.3
+pandas==1.5.3
 prometheus-pandas==0.3.2
 requests==2.28.2
