--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: "1.19.6"
+          go-version: "^1.19"
+          check-latest: true
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6
         with:
