--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -20,17 +20,22 @@ jobs:
         with:
           go-version: '1.18'
 
-      - name: Generate release notes
-        run: |
-          VERSION="${GITHUB_REF#refs/tags/}"
-          CHANGELOG_URL="https://github.com/cometbft/cometbft/blob/${VERSION}/CHANGELOG.md"
-          echo "See the [CHANGELOG](${CHANGELOG_URL}) for changes available in this pre-release, but not yet officially released." > ../release_notes.md
+      - name: Build
+        uses: goreleaser/goreleaser-action@v4
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          version: latest
+          args: build --skip-validate   # skip validate skips initial sanity checks in order to be able to fully run
+
+      # Link to CHANGELOG_PENDING.md as release notes.
+      - run: echo https://github.com/cometbft/cometbft/blob/${GITHUB_REF#refs/tags/}/CHANGELOG_PENDING.md > ../release_notes.md
 
       - name: Release
         uses: goreleaser/goreleaser-action@v4
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           version: latest
-          args: release --clean --release-notes ../release_notes.md
+          args: release --rm-dist --release-notes=../release_notes.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
