--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ checksum:
 
 release:
   prerelease: auto
-  name_template: "v{{.Version}}"
+  name_template: "{{.Version}}"
 
 archives:
   - files:
