--- a/.github/workflows/e2e-manual.yml
+++ b/.github/workflows/e2e-manual.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Generate testnets
         working-directory: test/e2e
         # When changing -g, also change the matrix groups above
-        run: ./generator-multiversion.sh -g 4 -d networks/nightly/
+        run: ./build/generator -g 4 -d networks/nightly
 
       - name: Run ${{ matrix.p2p }} p2p testnets
         working-directory: test/e2e
