Fix workflow trigger
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -3,9 +3,9 @@
 name: Check release version
 
 on:
-  pull_request:
+  push:
     branches:
-      - 'release/*'
+      - 'release/**'
 
 jobs:
   check-version:
