--- a/test/e2e/networks/ci.toml
+++ b/test/e2e/networks/ci.toml
@@ -17,6 +17,20 @@ validator01 = 100
 
 [validator_update.0]
 validator01 = 10
+validator02 = 20
+validator03 = 30
+validator04 = 40
+
+[validator_update.1010]
+validator05 = 50
+
+# validator03 gets killed and validator05 has lots of perturbations, so weight them low.
+[validator_update.1020]
+validator01 = 100
+validator02 = 100
+validator03 = 50
+validator04 = 100
+validator05 = 50
 
 [node.seed01]
 mode = "seed"
@@ -25,12 +39,42 @@ perturb = ["restart"]
 [node.validator01]
 seeds = ["seed01"]
 snapshot_interval = 5
-perturb = ["kill", "kill", "kill", "kill", "kill", "kill", "kill", "restart", "restart", "restart", "restart", "restart", "restart", "restart", "restart", "restart"]
+perturb = ["disconnect"]
+
+[node.validator02]
+seeds = ["seed01"]
+database = "boltdb"
+privval_protocol = "tcp"
+persist_interval = 0
+perturb = ["restart"]
+
+[node.validator03]
+seeds = ["seed01"]
+database = "badgerdb"
+privval_protocol = "unix"
+persist_interval = 3
+retain_blocks = 10
+perturb = ["kill"]
+
+[node.validator04]
+persistent_peers = ["validator01"]
+database = "rocksdb"
+perturb = ["pause"]
+
+[node.validator05]
+block_sync = "v0" 
+start_at = 1005 # Becomes part of the validator set at 1010
+persistent_peers = ["validator01", "full01"]
+database = "cleveldb"
+privval_protocol = "tcp"
+perturb = ["kill", "pause", "disconnect", "restart"]
 
 [node.full01]
+start_at = 1010
 mode = "full"
 block_sync = "v0"
-persistent_peers = ["validator01"]
+persistent_peers = ["validator01", "validator02", "validator03", "validator04", "validator05"]
+retain_blocks = 10
 perturb = ["restart"]
 
 [node.full02]
@@ -40,3 +84,13 @@ block_sync = "v0"
 state_sync = true
 seeds = ["seed01"]
 perturb = ["restart"]
+
+[node.light01]
+mode= "light"
+start_at= 1005
+persistent_peers = ["validator01", "validator02", "validator03"]
+
+[node.light02]
+mode= "light"
+start_at= 1015
+persistent_peers = ["validator04", "full01", "validator05"]
