Activate prometheus on ci.toml

--- a/test/e2e/networks/ci.toml
+++ b/test/e2e/networks/ci.toml
@@ -11,6 +11,7 @@ process_proposal_delay = "100ms"
 check_tx_delay = "0ms"
 # The most common case (e.g. Cosmos SDK-based chains).
 abci_protocol = "builtin"
+prometheus = true
 
 [validators]
 validator01 = 100
