--- a/.github/workflows/e2e-manual-multiversion.yml
+++ b/.github/workflows/e2e-manual-multiversion.yml
@@ -1,22 +1,23 @@
-# Manually run randomly generated E2E testnets (as nightly).
-name: e2e-manual
+# Manually run the nightly E2E tests for a particular branch, but test with
+# multiple versions.
+name: e2e-manual-multiversion
 on:
   workflow_dispatch:
 
 jobs:
-  e2e-nightly-test:
+  e2e-manual-multiversion-test:
     # Run parallel jobs for the listed testnet groups (must match the
     # ./build/generator -g flag)
     strategy:
       fail-fast: false
       matrix:
-        group: ['00', '01', '02', '03']
+        group: ['00', '01', '02', '03', '04']
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.19'
+          go-version: '1.20'
 
       - uses: actions/checkout@v3
 
@@ -28,11 +29,9 @@ jobs:
       - name: Generate testnets
         working-directory: test/e2e
         # When changing -g, also change the matrix groups above
-<<<<<<< HEAD
-        run: ./build/generator -g 4 -d networks/nightly
-=======
-        run: ./build/generator -g 5 -d networks/nightly/ -p
->>>>>>> 01c0188de (e2e: add prometheus flag to Generator CLI (#563))
+        # Generate multi-version tests with double the quantity of E2E nodes
+        # based on the current branch as compared to the latest version.
+        run: ./build/generator -g 5 -m "latest:1,local:2" -d networks/nightly/ -p
 
       - name: Run ${{ matrix.p2p }} p2p testnets
         working-directory: test/e2e
